--- a/COVID.html
+++ b/COVID.html
@@ -9,9 +9,7 @@
   
     <link href="css/css.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="static/css/ui2.css?2013032917" />
-    <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/zzsc.js" type="text/javascript"></script>
-	<script src="js/movewin.js" type="text/javascript"></script>
+
 
 
 
@@ -27,7 +25,7 @@
                     <h1 >Map description </h1>
                     <div style="height: 360px; overflow: auto">
 					<p/>
-                        &nbsp &nbsp  
+                        &nbsp &nbsp This map combined point grid map with calendar based visualization to visiualize the spatial-temporal patterns of COVID-19 confirmed cases and at a city-level.
 					</div>
                 </div>
             </td>
