--- a/COVID.html
+++ b/COVID.html
@@ -9,6 +9,8 @@
   
     <link href="css/css.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="static/css/ui2.css?2013032917" />
+	    <script src="js/jquery.min.js" type="text/javascript"></script>
+
 
 
 
