--- a/COVID.html
+++ b/COVID.html
@@ -10,8 +10,7 @@
     <link href="css/css.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="static/css/ui2.css?2013032917" />
 	    <script src="js/jquery.min.js" type="text/javascript"></script>
-
-
+	    <script src="js/zzsc.js" type="text/javascript"></script>
 
 
 
