--- a/COVID.html
+++ b/COVID.html
@@ -26,7 +26,7 @@
                     <h1 >Map description </h1>
                     <div style="height: 360px; overflow: auto">
 					<p/>
-                        &nbsp &nbsp This map combined point grid map with calendar based visualization to visiualize the spatial-temporal patterns of COVID-19 confirmed cases and at a city-level.
+                        &nbsp &nbsp This map combined point grid map with calendar based visualization to visiualize the spatial-temporal patterns of COVID-19 confirmed cases at a city-level.
 					</div>
                 </div>
             </td>
